# turtle_nest

./: .dockerignore  .gitignore  README.md
.devcontainer/: devcontainer.json
.github/workflows/: run_pipeline.yaml
docker/: Dockerfile  docker-compose.yaml  ros_entrypoint.sh
turtle_nest/: CHANGELOG.rst  CMakeLists.txt  custom_theme.qss  package.xml  resources.qrc  turtle_nest.pro
turtle_nest/fonts/Ubuntu_Sans/: README.txt
turtle_nest/include/turtle_nest/: addnodedialog.h  build_type_enum.h  file_utils.h  generate_cmake.h  generate_launch.h  generate_msgs_pkg.h  generate_node.h  generate_params.h  generate_setup_py.h  mainwindow.h  modify_existing_pkg.h  node_type_enum.h  package_xml_tools.h  packageinfo.h  packageinfoform.h  packageswindow.h  rospkgcreator.h  string_tools.h
turtle_nest/include/turtle_nest/node_generators/: base_node_generator.h  cpp_node_generator.h  mixed_cpp_python_node_generator.h  node_generator_factory.h  python_node_generator.h
turtle_nest/include/turtle_nest/package_generators/: base_package_generator.h  cpp_package_generator.h  create_package.h  get_package_generator.h  mixed_cpp_python_package_generator.h  mixed_package_generator.h  msgs_package_generator.h  package_generator_factory.h  python_package_generator.h
turtle_nest/src/: addnodedialog.cpp  addnodedialog.ui  file_utils.cpp  generate_cmake.cpp  generate_launch.cpp  generate_msgs_pkg.cpp  generate_node.cpp  generate_params.cpp  generate_setup_py.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  modify_existing_pkg.cpp  package_xml_tools.cpp  packageinfoform.cpp  packageinfoform.ui  packageswindow.cpp  packageswindow.ui  python_file_utils.py  rospkgcreator.cpp  string_tools.cpp
turtle_nest/src/node_generators/: cpp_node_generator.cpp  mixed_cpp_python_node_generator.cpp  node_generator_factory.cpp  python_node_generator.cpp
turtle_nest/src/package_generators/: base_package_generator.cpp  cpp_package_generator.cpp  create_package.cpp  get_package_generator.cpp  mixed_cpp_python_package_generator.cpp  mixed_package_generator.cpp  msgs_package_generator.cpp  package_generator_factory.cpp  python_package_generator.cpp
turtle_nest_tests/: README.md  main.cpp  test_utils.cpp  test_utils.h  tst_file_utils.cpp  tst_generate_node.cpp  tst_modify_existing_pkg.cpp  tst_package_creation.cpp  tst_package_xml_tools.cpp  tst_ros_pkg_creator.cpp  turtle_nest_tests.pro
turtle_nest_tests/fixtures/package_xml_files/: general_empty_file.package.xml  general_no_package_root.package.xml  rclcpp_build_and_exec_depend.package.xml  rclcpp_build_depend.package.xml  rclcpp_depend.package.xml  rclcpp_empty_depend.package.xml  rclcpp_exec_depend.package.xml  rclpy_depend.package.xml  rclpy_empty_depend.package.xml  rclpy_exec_depend.package.xml
turtle_nest_tests/fixtures/setup_py_files/: no_console_scripts.setup.py  no_entry_points.setup.py  no_setup.setup.py
turtle_nest_tests/fixtures/test_nodes/: custom_message_import.py
